# core

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.project.txt  CMakeLists.txt  CNAME  LICENSE  LICENSE.md  OsomiCore.sln  README.md  addproject.bat  appveyor.yml  bake_models.bat  build_android.bat  build_mingw.bat  clean.bat  compile_shaders.bat  index.md  make_android.bat  make_android.sh  make_pc.bat  make_pc.sh  make_project.bat  make_windows.sh  package_windows.sh  prepare_resources.bat  prepare_resources.sh  reload.bat  run_android.bat  styleguide.md  update_project.bat
OECore/: OECore.vcxproj
app/: CMakeLists.project.txt  CMakeLists.txt
app/app_android/: AndroidManifest.xml  CMakeLists.txt  android_apk_make.txt
app/app_android/src/: main.cpp
app/app_windows/: CMakeLists.txt  app_windows.aps  app_windows.rc
app/app_windows/src/: main.cpp
app/include/: main.h
app/res/: baker.oiBM
app/res/models/: anvil.fbx  anvil.oiRM  anvil0.fbx  anvil0.oiRM  cube.fbx  cube.oiRM  cube0.fbx  earth.json  icosphere.fbx  planets.json  quad.oiRM  sphere.fbx  sphere.oiRM  sword.fbx  sword.oiRM
app/res/settings/: input.json
app/res/shaders/: cmi_lighting.comp  cmi_lighting.compute.oiSH  cmi_lighting.oiSH  lighting.glsl  lighting.ogsl  node_system.comp  node_system.compute.oiSH  post_process.frag  post_process.graphics.oiSH  post_process.oiSH  post_process.vert  setupShaderData.cpp.unused  simple - copy.oiSH  simple.frag  simple.frag.ospv  simple.graphics.oiSH  simple.oiSH  simple.vert  simple.vert.ospv  simple.vert.spv  types.glsl
app/src/: main.cpp
app_android/: AndroidManifest.xml  CMakeLists.project.txt  CMakeLists.txt  build.xml  strings.xml
app_android/res/values/: strings.xml
app_android/src/: main.cpp
app_pc/: CMakeLists.project.txt  CMakeLists.txt  app_pc.aps  app_pc.rc
app_pc/src/: main.cpp
ogc/: CMakeLists.txt
ogc/include/api/spv/: GLSL.std.450.h  spirv.h  spirv_glsl.h  spvhelper.h
ogc/include/api/stbi/: stbi_load.h  stbi_write.h
ogc/include/graphics/: camera.h  camerafrustum.h  commandlist.h  drawlist.h  gbuffer.h  generic.h  graphics.h  graphicsinterface.h  graphicsobject.h  graphicsresource.h  light.h  materiallist.h  mesh.h  meshbuffer.h  pipeline.h  pipelinestate.h  rendertarget.h  sampler.h  shader.h  shaderbuffer.h  shaderenums.h  shaderstage.h  texture.h  texturelist.h  versionedtexture.h  view.h  viewbuffer.h
ogc/include/graphics/format/: fbx.h  obj.h  oirm.h  oisb.h  oish.h
ogc/include/graphics/gl/: generic.h  vulkan.h
ogc/include/graphics/helper/: bakemanager.h  spvhelper.h
ogc/include/graphics/interface/: basicgraphicsinterface.h  graphicsinterface.h
ogc/include/graphics/objects/: gbuffer.h  gpubuffer.h  graphicsobject.h  graphicsobjectref.h  graphicsresource.h  objects.h
ogc/include/math/: simplexnoise.h
ogc/src/api/spv/: spirv_cfg.cpp  spirv_cross.cpp  spirv_glsl.cpp  spvhelper.cpp
ogc/src/api/stbi/: stbi.cpp
ogc/src/gl/vulkan/: vkgraphics.cpp  vkshaderstage.cpp  vktexture.cpp
ogc/src/graphics/: camera.cpp  camerafrustum.cpp  commandlist.cpp  drawlist.cpp  gbuffer.cpp  graphics.cpp  graphicsinterface.cpp  graphicsobject.cpp  materiallist.cpp  mesh.cpp  meshbuffer.cpp  pipeline.cpp  pipelinestate.cpp  rendertarget.cpp  sampler.cpp  shader.cpp  shaderbuffer.cpp  shaderstage.cpp  texture.cpp  texturelist.cpp  versionedtexture.cpp  view.cpp  viewbuffer.cpp
ogc/src/graphics/format/: fbx.cpp  obj.cpp  oirm.cpp  oisb.cpp  oish.cpp  oishcompiler.cpp
ogc/src/graphics/helper/: bakemanager.cpp  spvhelper.cpp
ogc/src/math/: simplexnoise.cpp
ogc/vkogc/: CMakeLists.txt
oibaker/: CMakeLists.txt
oibaker/src/: main.cpp
oirm_gen/: CMakeLists.txt
oirm_gen/src/: main.cpp
oish_gen/: CMakeLists.txt
oish_gen/include/: spirv_cfg.h  spirv_common.h  spirv_cross.h
oish_gen/src/: main.cpp  spirv_cfg.cpp  spirv_cross.cpp  spirv_glsl.cpp
ostlc/: CMakeLists.child.txt  CMakeLists.txt
ostlc/include/format/: oisl.h
ostlc/include/math/: simplexnoise.h
ostlc/include/memory/: blockallocator.h  objectallocator.h
ostlc/include/template/: common.h  enum.h  platformdefines.h  sourcedefines.h  templatefuncs.h
ostlc/include/types/: array.h  bitset.h  buffer.h  datatype.h  generic.h  grid.h  matrix.h  quat.h  string.h  structuredbuffer.h  thread.h  vector.h
ostlc/include/utils/: binaryhelper.h  dyli.h  json.h  log.h  random.h  serialization.h  timer.h
ostlc/src/format/: oisl.cpp
ostlc/src/math/: simplexnoise.cpp
ostlc/src/memory/: blockallocator.cpp
ostlc/src/types/: bitset.cpp  buffer.cpp  string.cpp  structuredbuffer.cpp
ostlc/src/utils/: json.cpp  log.cpp  random.cpp  timer.cpp
otc/: CMakeLists.txt
otc/include/memory/: objectallocator.h
otc/include/template/: enum.h  reflection.hpp  serialize.hpp  templatefuncs.h
otc/include/types/: array.h  bitset.h  buffer.h  generic.h  list.hpp  matrix.h  string.h  vector.h
otc/include/utils/: log.h  serialization.h
otc/src/types/: bitset.cpp  buffer.cpp  string.cpp
otc/src/utils/: binaryhelper.cpp  log.cpp  timer.cpp
owc/: CMakeLists.child.txt  CMakeLists.txt
owc/include/file/: filemanager.h
owc/include/format/: oisl.h
owc/include/input/: binding.h  controller.h  enums.h  inputdevice.h  inputhandler.h  inputmanager.h  keyboard.h  mouse.h
owc/include/viewport/: viewport.hpp  windowviewport.hpp
owc/include/window/: window.h  windowaction.h  windowinfo.h  windowinterface.h  windowmanager.h
owc/src/: main.cpp
owc/src/file/: filemanager.cpp
owc/src/format/: oisl.cpp
owc/src/input/: binding.cpp  controller.cpp  inputdevice.cpp  inputhandler.cpp  inputmanager.cpp  keyboard.cpp  mouse.cpp
owc/src/viewport/: windowviewport.cpp
owc/src/window/: window.cpp  windowinfo.cpp  windowinterface.cpp  windowmanager.cpp
test_android/: AndroidManifest.xml  CMakeLists.txt
test_android/res/values/: strings.xml
test_android/src/: main.cpp
test_pc/: CMakeLists.txt
test_pc/src/: main.cpp
vkogc/: CMakeLists.txt
vkogc/include/graphics/: vkgpuallocator.h  vkgraphics.h  vulkan.h
vkogc/src/graphics/: vkgpuallocator.cpp  vkgraphics.cpp
(+303 files in other folders)
